kuber/2.3/exercise_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - name: frontend
      port: 80
      targetPort: 8000
