kuber/2.3/exercise_2/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress
spec:
  tls:
  - hosts:
      - localhost
    secretName: secret-tls
  rules:
  - host: localhost
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port: 
              number: 9001
